[package]
name = "set_checker_exhaustive_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
literally = "0.1.3"
rand = "0.8.5"
serde_json = "1.0.96"
serde_json_lenient = "0.1.4"
indicatif = "0.17"
